Fix: layout mobile shift

--- a/src/assets/scss/layouts/_template.scss
+++ b/src/assets/scss/layouts/_template.scss
@@ -8,6 +8,7 @@ body {
   background-color: $dark;
 }
 
+main,
 section {
   width: 100%;
 }
